--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
+    "all": "^0.0.0",
     "expo": "~52.0.35",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~13.0.3",
