--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "^2.20.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-home-indicator": "^0.2.10",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
