--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "all": "^0.0.0",
+    "axios": "^1.7.9",
     "expo": "~52.0.35",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~13.0.3",
